--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField("String", "API_KEY", API_KEY)
     }
 
     buildTypes {
@@ -57,5 +59,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common-java8:2.5.1"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
     implementation("com.squareup.moshi:moshi-kotlin:1.13.0")
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    def paging_version = "3.1.0"
+    implementation "androidx.paging:paging-runtime:$paging_version"
 }
